--- a/biblioteca/index.html
+++ b/biblioteca/index.html
@@ -12,7 +12,7 @@
     <img src="C:\Users\MariaEduardaSouzaDos\Documents\biblioteca\imagens\jogos de herança2.jpeg" width="80" height="90">
     <img src="C:\Users\MariaEduardaSouzaDos\Documents\biblioteca\imagens\jogos de herança3.jpeg" width="80" height="90">
   </button> <button>  <a href="https://www.outrapagina.com" target="_blank">Não Finalizados:</a>
-    <img src="C:\Users\MariaEduardaSouzaDos\Documents\biblioteca\imagens\oladofeiodoamor.jfif"    width="80" height="90">
+    <img src="C:\Users\MariaEduardaSouzaDos\Documents\biblioteca\imagens\oladofeiodoamor.jpg"    width="80" height="90">
     <img src="C:\Users\MariaEduardaSouzaDos\Documents\biblioteca\imagens\avidainvisiveldeaddie.jpeg"    width="80" height="90">
     <img src="C:\Users\MariaEduardaSouzaDos\Documents\biblioteca\imagens\emoutravidatalvez.jpeg"  width="80" height="90">
     <img src="C:\Users\MariaEduardaSouzaDos\Documents\biblioteca\imagens\talvezvcdeva.jpg" width="80" height="90">
